objects/Delphi_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Base_URL__c</fullName>
        <label>Base URL</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Configuration_Type__c</fullName>
        <label>Configuration Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Automatic</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Model_Run__c</fullName>
        <label>Last Model Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Prediction_Run__c</fullName>
        <label>Last Prediction Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Model_Status__c</fullName>
        <label>Model Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prediction_Status__c</fullName>
        <defaultValue>&quot;Not Started&quot;</defaultValue>
        <label>Prediction Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFE_Fields__c</fullName>
        <label>RFE Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Selected_Field_Account__c</fullName>
        <label>Selected Field Account</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Selected_Field_User__c</fullName>
        <label>Selected Field User</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Selected_Fields__c</fullName>
        <label>Selected Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Time_Prediction_Status__c</fullName>
        <label>Time Prediction Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>urlb__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_360, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_360))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>urlb</label>
        <type>Text</type>
    </fields>
    <label>Delphi Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Dephi Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dephi Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>